docs: update thread pool review plan after fixes